2003-05-09  Per Bothner  <per@bothner.com>

	* configure.in:  Remove --with-java-collections arg and related crud.
	* build.xml (build.preprocessed):  Remove gnu/lists and QName.
	Remove no-longer-needed will-collections crud.
	* build.properties:  Remove with-collections.

	* build.xml (build.selectjava):  Add new gnu/lists classes.

2003-05-04  Per Bothner  <per@bothner.com>

	* build.xml (build.selectjava):  Add ListItems.java and
	IteratorItems.java.
	(build.preprocessed):  Remove CallContext.java and Focus.java.

	* Makefile.am (java1-java2-files):  New rule.

2003-05-03  Per Bothner  <per@bothner.com>

	* build.xml:  Remove no-longer needed support for "references".
	* build.properties:  Likewise.
	* Make-rules:  Remove WITH_JAVA_REFERENCES conditionals.
	* configure.in:  Drop --without-java-references argument.

2003-04-29  Jim White  <jim@pagesmiths.com>

	* build.xml:  Support for JAVA1 <-> JAVA2 source conversion.
	(select-java1, select-java2, check-for-java2, select-java1-auto,
	select-java2-auto, select-java-auto):  New targets.

2003-04-30  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite):  Intern name before lookup.

2003-04-25  Per Bothner  <per@bothner.com>

	* Makefile.am (select-java1, select-java2):  New rules to convert
	basebase to Java1-compliant and back again.

2003-04-21  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (getOriginalRef):  New method.
	(matches, getBinding, rewrite):  Use getOriginalRef.

	* kawa/lang/EqualPat.java (match):  Add a kludge to for '::'.
	Fixes bug reported 04-11 by Vladimir Tsichevski <wowa@jet.msk.su>.

	* kawa/lang/SyntaxRules.java (<init>):  Better debugging output.

	* kawa/lang/AutoloadProcedure.java:  Call Procedure's getName
	method instead of deprecated name method.
	* kawa/lang/CompileFile.java:  Likewise.
	* kawa/standard/TracedProcedure.java:  Likewise.
	* kawa/standard/cxr.java:  Likewise.
	* kawa/standard/readchar.java:  Likewise.
